# stargazer

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  claude.md  dev.Dockerfile  marimo.toml  mkdocs.yml  pyproject.toml  zensical.toml
.claude/: settings.json
.github/workflows/: docs.yml
.opencode/agent/: architecture.md  code-review.md  task.md  technical-writer.md  test.md  workflow.md
.opencode/context/: brainstorm_system_prompt.md  filesystem_spec.md  flyte_v2_docs.md  type_spec.md
.opencode/context/tool_refs/: applybqsr.md  bammetrics.md  bamsort.md  bqsr.md  commands.example.txt  deepsomatic.md  fq2bam.md  postpon.md  (+10 more)
.opencode/plans/: 16_admin_app_with_dashboard.md  17_per_notebook_apps.md  18_tighten_github_token_scope.md  19_tighten_tutorial_story.md  20_asset_manager_page.md  21_asset_manager_template.md  MVP_ROADMAP.md  ROADMAP.md  TODO.md  browser.md  constellations.md  fix_tests_local_mode.md  github-auth-union-isolation.md  keyvalue_components.md  local_filesystem.md  mcp_server.md  platform_architecture.md  scrna_clustering.md  stargazer_mode_config.md  storage_client_refactor.md  systematic_test_fix_plan.md  tui.md  typed_file_components.md  typed_intermediates_refactor.md
.opencode/reference/: devbox_workarounds.md  sdk_examples_concise.md
.opencode/specs/: browser.md  filesystem.md  filesystem_spec.md  mcp.md  modes.md  tui.md
app/: __init__.py  admin_app.py  assets.py  config.py  github.py  init.py  installation_tokens.py  launch-notebook.sh  notebook_app.py  notebook_meta.py  notebooks.py  oauth.py  per_notebook.py  provision.py  proxy.py  session.py  templates.py  terminal_overlay.html
app/templates/: _tile.html  assets.html  base.html  dashboard.html  login.html  provisioning.html
cli/: README.md  devbox-setup.sh  upload_to_pinata.py
docker/: dev.Dockerfile  qs.Dockerfile
docs/: gen_catalog.py  getting-started.md  index.md
docs/architecture/: app.md  cli.md  configuration.md  mcp-server.md  modes.md  notebook.md  overview.md  tasks.md  types.md  workflows.md
docs/guides/: contributing.md  mcp-server.md  writing-a-task.md  writing-a-workflow.md
docs/reference/: api.md  catalog.md
docs/workflows/: scrna.md
src/stargazer/: __init__.py  app.py  build_images.py  config.py  init.py  marshal.py  registry.py  server.py
tests/: TESTING_GUIDE.md  __init__.py  config.py  conftest.py  helpers.py  test_alignment.py  test_applybqsr.py  test_baserecalibrator.py  test_bwa.py  test_combinegvcfs.py  test_fq2bam.py  test_genotypegvcf.py  test_germline_workflow.py  test_markduplicates.py  test_mergebamalignment.py  test_pinata.py  test_query.py  test_reads.py  test_reference.py  test_samtools.py  test_sortsam.py  test_variants.py
tests/assets/: test_alignment.py  test_assemble.py  test_reads.py  test_reference.py  test_variants.py
tests/fixtures/: GRCh38_TP53.dict  GRCh38_TP53.fa.amb  GRCh38_TP53.fa.ann  GRCh38_TP53.fa.bwt  GRCh38_TP53.fa.fai  GRCh38_TP53.fa.pac  GRCh38_TP53.fa.sa  Mills_and_1000G_gold_standard.indels.TP53.hg38.vcf  Mills_and_1000G_gold_standard.indels.TP53.hg38.vcf.idx  NA12829_TP53_bwa_aligned.bam  NA12829_TP53_markdup.bam  NA12829_TP53_merged.bai  NA12829_TP53_merged.bam  NA12829_TP53_paired.bam.bai  NA12829_TP53_recalibrated.bai  NA12891_TP53.g.vcf  NA12892_TP53.g.vcf  build_local_db.py  dummy.txt  known_sites_TP53.vcf  known_sites_TP53.vcf.idx  stargazer_local.json  upload_delete.txt
tests/integration/: __init__.py
tests/notebooks/: test_notebook_smoke.py
tests/types/: conftest.py  test_alignment.py  test_assemble.py  test_constellation.py  test_reads.py  test_reference.py  test_serialization.py  test_variants.py
tests/unit/: __init__.py  conftest.py  test_annotation_fields.py  test_app.py  test_asset.py  test_assets_page.py  test_assets_routes.py  test_bundles.py  test_component_file.py  test_config.py  test_installation_tokens.py  test_log_execution.py  test_marshal.py  test_notebook_meta.py  test_per_notebook.py  test_proxy.py  test_registry.py  test_reports.py  test_scrna_tasks.py  test_specialize.py  test_storage_cache.py
tests/utils/: test_pinata.py  test_query.py  test_subprocess.py
tests/workflows/: test_germline_workflow.py
(+199 files in other folders)
