[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stargazer"
version = "0.1.0"
description = "Bioinformatics workflow orchestration system combining IPFS storage with Flyte v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=24.1.0",
    "flyte[tui]>=2.0.3",
    "mcp[cli]>=1.0.0",
    "tinydb>=4.8.2",
    "loguru>=0.7.3",
]

[project.scripts]
stargazer = "stargazer.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "pinata: tests that require Pinata API access (PINATA_JWT)",
]
filterwarnings = [
    # Ignore Pydantic deprecation warnings from flyte package (third-party)
    "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
]

[dependency-groups]
dev = [
    "mkdocstrings[python]>=1.0.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.0",
    "zensical>=0.0.24",
]
