[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stargazer"
version = "0.1.0"
description = "Bioinformatics workflow orchestration system combining IPFS storage with Flyte v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=24.1.0",
    "flyte[tui]>=2.0.3",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "tinydb>=4.8.2",
]

[project.optional-dependencies]
bio = [
    "scanpy>=1.12",
    "anndata>=0.12.10",
    "scikit-image>=0.26.0",
    "igraph>=1.0.0",
    "pooch>=1.9.0",
]
notebook = ["marimo>=0.10.0", "stargazer[bio]"]
mcp = ["mcp[cli]>=1.0.0"]
landing = ["fastapi>=0.115", "uvicorn>=0.34", "itsdangerous>=2.1"]
docs = ["mkdocstrings[python]>=1.0.3"]
app = ["stargazer[notebook,landing]"]
all = ["stargazer[notebook,mcp,landing,docs]"]

[project.scripts]
stargazer = "stargazer.server:main"
stargazer-app = "app.admin_app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "pinata: tests that require Pinata API access (PINATA_JWT)",
]
filterwarnings = [
    # Ignore Pydantic deprecation warnings from flyte package (third-party)
    "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["stargazer*", "app*"]

[tool.setuptools.package-data]
stargazer = ["bundles/*.yaml", "notebooks/*.py"]
app = ["templates/*.html"]

[dependency-groups]
dev = [
    "mkdocstrings[python]>=1.0.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.0",
    "zensical>=0.0.24",
]
